fixe 404 url and margin gap

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -3,7 +3,7 @@
 // Hero
 
 #hero {
-  scroll-margin-bottom: -100px;
+  scroll-margin-top: 60px;
 }
 
 .hero_line {
